--- a/portfolio.html
+++ b/portfolio.html
@@ -71,8 +71,7 @@ done or will do in college or your career.
                 <p class="card-text">
                     Build and Design of a digital clock module, registers, Arithmetic Logic Unit, Random Access Memory,
                     program counter, memory access, multiplexed output display, and control logic. Complete with
-                    Instruction Set Architecture
-                    and machine language instructions set.
+                    Instruction Set Architecture and machine language instructions set.
                 </p>
             </div>
         </div>
@@ -82,7 +81,8 @@ done or will do in college or your career.
                 <h5 class="card-title">L1 Rocket Certification</h5>
                 <p class="card-text">
                     Level 1 High Power Rocketry construction, handling, launch preparation, and retrieval. "Ultraviolet"
-                    reached approximately 2491 feet above ground level and returned in one piece.
+                    reached approximately 2491 feet above ground level and returned in one piece. The rocket contained a 
+                    BMP180 Barometric Pressure/Temperature/Altitude Sensor running on an Arduino and custom circuits.
                 </p>
                 <p>
                     Learn More about the certification <a
@@ -100,7 +100,7 @@ done or will do in college or your career.
                     scheme for optimal Lidar recognition. New models printed are cheaper than the current standard industry pricing.
                 </p>
                 <p>
-                    Find my project here <a href="https://github.com/TBolton2000/aggie-honor-bot">here</a>.
+                    Find my Thingiverse profile <a href="https://www.thingiverse.com/amyscich/about">here</a>.
                 </p>
             </div>
         </div>
@@ -127,6 +127,10 @@ done or will do in college or your career.
                 </div>
             </div>
         </div>
+    </div>
+
+    <div>
+
     </div>
 
     <!-- footer contacts -->
