--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
     </nav>
     <div class="container-fluid" style="right:100px">
-        <p>Computer Science & Electrical Engineering Major at Texas A&M Univerity</p>
+        <p>Computer Science & Electrical Engineering Major at Texas A&M University</p>
     </div>
     
     <!-- img slider -->
