--- a/contact.html
+++ b/contact.html
@@ -60,21 +60,19 @@
                 <input type="text" class="form-control" placeholder="Enter Your First name">
             </div>
             <div class="form-group col-md-6">
-                <label for="inputEmail4">Email</label>
-                <input type="email" class="form-control" id="inputEmail4" placeholder="Enter Your Email">
+                <label for="text">Last Name</label>
+                <input type="text" class="form-control" placeholder="Enter Your Last name">
             </div>
-
         </div>
         <!-- Secoond row of inputs -->
         <div class="form-row">
             <div class="form-group col-md-6">
-                <label for="text">First Name</label>
-                <input type="text" class="form-control" placeholder="Enter Your Last name">
+                <label for="inputEmail4">Email</label>
+                <input type="email" class="form-control" id="inputEmail4" placeholder="Enter Your Email">
             </div>
-
             <div class="form-group col-md-6">
                 <label for="text">Company/Organization</label>
-                <input type="text" class="form-control" placeholder="Enter Your Company/Organization?">
+                <input type="text" class="form-control" placeholder="Enter Your Company/Organization">
             </div>
         </div>
         <!-- Third row of input -->
