--- a/about.html
+++ b/about.html
@@ -7,6 +7,9 @@
     <!-- Tab Name -->
     <title>Albin "Kyle" Myscich</title>
 
+    <!-- animated favicon related to mathematical spiral -->
+    <link rel="icon" href="gifs/spiral.gif" type="gif" >
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -43,7 +46,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFILE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFES IMG</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">SERVICE</a></li>
                     <li class="nav-item active"><a class="nav-link" href="about.html">ABOUT</a></li>
@@ -58,7 +61,7 @@
     <div class="jumbotron jumbotron-fluid bg-light" style="font-size: 110%;">
         <div class="container">
           <h1>Howdy!</h1>
-          <img src="img/overlook.jpg" style="width:310px;height:auto;padding:10px;" class="rounded float-right" alt="...">
+          <img src="img/overlook.jpg" style="width:350px;height:auto;padding:10px;" class="rounded float-right shadow mb-5 bg-dark" alt="Albin Kyle Myscich">
           <p>
             My name’s Albin Kyle Myscich IV and I’m from the Dallas Metroplex. I’m currently pursuing a double major in computer science and electrical engineering 
             with a double minor in mathematics and cybersecurity at Texas A&M University. I’m actively researching robotics spatial motion planning in the A&M 
