--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <!-- Tab Name -->
     <title>Albin "Kyle" Myscich</title>
 
+    <!-- animated favicon related to mathematical spiral -->
+    <link rel="icon" href="gifs/spiral.gif" type="gif" >
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -34,7 +37,7 @@
 <body>
 
     <!-- nav bar -->
-    <nav class="navbar navbar-expand-md navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-md navbar-light bg-white sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand" style="font-size: 170%" href="index.html"><b>Albin "Kyle" Myscich</b></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponse">
@@ -44,7 +47,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item active"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFILE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFES IMG</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">SERVICE</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
@@ -53,7 +56,7 @@
             </div>
         </div>
     </nav>
-    <div class="container-fluid" style="right:100px">
+    <div class="container-fluid bg-white" style="right:100px">
         <p>Computer Science & Electrical Engineering Major at Texas A&M University</p>
     </div>
     
@@ -65,10 +68,10 @@
             <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
             <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
         </ol>
-        <div class="carousel-inner">
+        <div class="carousel-inner ">
             <div class="carousel-item active" >
                 <img class="d-block w-100" src="gifs/plaPrint.gif" alt="First slide">
-                <div class="carousel-caption" style="transform: translateY(-80%);">
+                <div class="carousel-caption h-75">
                     <h1 class="display-2" style="font-size:700%">3D Printing</h1>
                     <h3>Models & Design</h3>
                     <button type="button" class="btn btn-outline-light btn-lg">RATES</button>
@@ -77,7 +80,7 @@
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="gifs/aluminumMill.gif" alt="Second slide">
-                <div class="carousel-caption" style="transform: translateY(-80%);">
+                <div class="carousel-caption h-75">
                     <h1 class="display-2" style="font-size:700%; vertical-align: center;">Milling</h1>
                     <h3>Aluminum | Brass | Copper</h3>
                     <button type="button" class="btn btn-outline-light btn-lg">RATES</button>
@@ -86,9 +89,9 @@
             </div>
             <div class="carousel-item">
                 <img class="d-block w-100" src="gifs/tagMill.gif" alt="Third slide">
-                <div class="carousel-caption" style="transform: translateY(-80%);">
+                <div class="carousel-caption h-75">
                     <h1 class="display-2" style="font-size:700%">Circuit Design</h1>
-                    <h3>PCBs & Art</h3>
+                    <h3>PCBs & Silkscreening</h3>
                     <button type="button" class="btn btn-outline-light btn-lg">RATES</button>
                     <button type="button" class="btn btn-primary btn-lg">REQUEST</button>
                 </div>
@@ -111,17 +114,17 @@
           <h1>Welcome!</h1>
           <p style="font-size: 26px;">
             My name is Kyle, and it looks like you've found your way to my website.
-            This site serves a way to let you know what I've been up to. Take a look around!
+            This site serves as a way to let you know what I've been up to. Take a look around!
           </p>
         </div>
       </div>
 
-    <!-- welcome page -->
+    <!-- featured projects page -->
     <div class="padding">
         <h1 class="display-4" style="text-align: center; padding: 20px;" >Featured Projects</h1>
     </div>
-    <div class="card-deck padding">
-        <div class="card">
+    <div class="card-deck padding" style="padding: 20px;">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="img/cpu.jpg" alt="8-Bit CPU">
           <div class="card-body">
             <h5 class="card-title">8-Bit CPU</h5>
@@ -132,7 +135,7 @@
             </p>
           </div>
         </div>
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="img/rocket.jpg" alt="L1 Rocket Certification">
           <div class="card-body">
             <h5 class="card-title">L1 Rocket Certification</h5>
@@ -150,7 +153,7 @@
             </p>
           </div>
         </div>
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="img/print.jpg" alt="3D Printed Point Cloud Scanner Reference Targets">
           <div class="card-body">
             <h5 class="card-title">3D Printed Point Cloud Scanner Reference Targets</h5>
@@ -183,8 +186,8 @@
                 <h2>Connect</h2>
             </div>
             <div class="col-12 social padding">
-                <a href="https://github.com/AMyscich"><i class="fa fa-github fa-3x" aria-hidden="true"></i></i></a>
-                <a href="https://www.linkedin.com/in/albin-myscich-a1b495b4"><i class="fa fa-linkedin fa-3x" aria-hidden="true"></i></a>
+                <a href="https://github.com/AMyscich"><i class="fa fa-github fa-3x" style="color: black;" aria-hidden="true"></i></i></a>
+                <a href="https://www.linkedin.com/in/albin-myscich-a1b495b4"><i class="fa fa-linkedin fa-3x" style="margin-left: 10px; color:black" aria-hidden="true"></i></a>
             </div>
         </div>
     </div>
@@ -213,5 +216,6 @@
 https://getbootstrap.com/docs/4.4/getting-started/introduction/, used as a reference manual to use several simplified components in bootstrap
 https://www.w3schools.com/bootstrap/bootstrap_ver.asp, used as a reference manual to use several templates with respect to the components in bootstrap 3 & 4
 https://www.youtube.com/watch?v=9cKsq14Kfsw&list=LLrMM-tm3yTDQTi7fiThclaQ&index=2&t=2568s, video explaining how to use bootstrap, and creates a nice template
-https://stackoverflow.com/, Do I really need to explain this one?
+https://stackoverflow.com/, Trouble Shooting
+https://math-is-beautiful.tumblr.com/post/53259921418, favicon gif
  -->
