--- a/service.html
+++ b/service.html
@@ -5,6 +5,9 @@
     <!-- Tab Name -->
     <title>Albin "Kyle" Myscich</title>
 
+    <!-- animated favicon related to mathematical spiral -->
+    <link rel="icon" href="gifs/spiral.gif" type="gif" >
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -41,7 +44,7 @@
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFILE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFES IMG</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                     <li class="nav-item active"><a class="nav-link" href="service.html">SERVICE</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
@@ -57,8 +60,8 @@
           <h1>Service</h1>
         </div>
       </div>
-    <div class="card-deck padding">
-        <div class="card">
+    <div class="card-deck" style="padding:20px;">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="img/roboticsEvent.jpg" alt="Bryan College Station Middle School Robotics">
           <div class="card-body">
             <h5 class="card-title">Bryan College Station Middle School Robotics</h5>
@@ -71,7 +74,7 @@
           
           </div>
         </div>
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="img/WECode.jpg" alt="L1 Rocket Certification">
           <div class="card-body">
             <h5 class="card-title">WE Code Volunteer Service</h5>
@@ -86,7 +89,7 @@
             </p>
           </div>
         </div>
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
           <img class="card-img-top" src="img/TARCVolunteer.jpg" alt="3D Printed Point Cloud Scanner Reference Targets">
           <div class="card-body">
             <h5 class="card-title">Dowell Middle School TARC Volunteering</h5>
