--- a/portfolio.html
+++ b/portfolio.html
@@ -8,6 +8,9 @@ done or will do in college or your career.
     <!-- Tab Name -->
     <title>Albin "Kyle" Myscich</title>
 
+    <!-- animated favicon related to mathematical spiral -->
+    <link rel="icon" href="gifs/spiral.gif" type="gif" >
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -47,7 +50,7 @@ done or will do in college or your career.
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
-                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFILE</a></li>
+                    <li class="nav-item"><a class="nav-link" href="profile.html">PROFES IMG</a></li>
                     <li class="nav-item active"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">SERVICE</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
@@ -63,8 +66,8 @@ done or will do in college or your career.
             <h1>Portfolio</h1>
         </div>
     </div>
-    <div class="card-deck padding">
-        <div class="card">
+    <div class="card-deck" style="padding:20px;">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
             <img class="card-img-top" src="img/cpu.jpg" alt="8-Bit CPU">
             <div class="card-body">
                 <h5 class="card-title">8-Bit CPU</h5>
@@ -75,7 +78,7 @@ done or will do in college or your career.
                 </p>
             </div>
         </div>
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
             <img class="card-img-top" src="img/rocket.jpg" alt="L1 Rocket Certification">
             <div class="card-body">
                 <h5 class="card-title">L1 Rocket Certification</h5>
@@ -90,7 +93,7 @@ done or will do in college or your career.
                 </p>
             </div>
         </div>
-        <div class="card">
+        <div class="card shadow p-3 mb-5 bg-white rounded">
             <img class="card-img-top" src="img/print.jpg" alt="3D Printed Point Cloud Scanner Reference Targets">
             <div class="card-body">
                 <h5 class="card-title">3D Printed Point Cloud Scanner Reference Targets</h5>
@@ -108,11 +111,11 @@ done or will do in college or your career.
     
     <!-- social media link -->
     <div class="social-box">
-        <div class="container col-md-2" style="padding:30px">
+        <div class="container" style="padding:30px">
             <div class="row text-center">
-                <div class="card text-white bg-dark mb-3 text-center">
+                <div class="card text-white bg-dark mb-3 mx-auto shadow p-3 rounded">
                     <div class="card-header">
-                        <h4><a href="https://github.com/AMyscich">Github</a></h4>
+                        <h4><a href="https://github.com/AMyscich" style="color:white">Github</a></h4>
                     </div>
                     <a href="https://github.com/AMyscich" style="color:white">
                     <div class="card-body">
