--- a/profile.html
+++ b/profile.html
@@ -11,6 +11,9 @@ resume should only be part of this page.
     <!-- Tab Name -->
     <title>Albin "Kyle" Myscich</title>
 
+    <!-- animated favicon related to mathematical spiral -->
+    <link rel="icon" href="gifs/spiral.gif" type="gif" >
+    
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -47,7 +50,7 @@ resume should only be part of this page.
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link" href="index.html">HOME</a></li>
                     <li class="nav-item"><a class="nav-link" href="projects.html">PROJECTS</a></li>
-                    <li class="nav-item active"><a class="nav-link" href="profile.html">PROFILE</a></li>
+                    <li class="nav-item active"><a class="nav-link" href="profile.html">PROFES IMG</a></li>
                     <li class="nav-item"><a class="nav-link" href="portfolio.html">PORTFOLIO</a></li>
                     <li class="nav-item"><a class="nav-link" href="service.html">SERVICE</a></li>
                     <li class="nav-item"><a class="nav-link" href="about.html">ABOUT</a></li>
@@ -60,7 +63,7 @@ resume should only be part of this page.
     <!-- jumbotron profile headline -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
-            <h1>Profile</h1>
+            <h1>PROFESSIONAL IMAGE</h1>
         </div>
     </div>
 
